Fix bg image of dashboard not covering whole block

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -8,7 +8,7 @@
 
   font-family: Arial, sans-serif;
 
-  background: #e9e8e4 url('/assets/images/dashboard-background.png') no-repeat center;
+  background: #e9e8e4 url('/assets/images/dashboard-background.png') no-repeat center / cover;
   border-radius: 20px;
 }
 
